Fixed alignment of return and shipping policy for AR store

--- a/src/route/MyAccount/MyAccount.style.scss
+++ b/src/route/MyAccount/MyAccount.style.scss
@@ -229,7 +229,7 @@
       .MyAccountTabListItem {
         button {
           text-align: right;
-          padding-right: 50px;
+          padding-right: 0.5rem;
           padding-left: 0;
 
           &:before {
